--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "url": "https://github.com/damunos/Ink-N-Thread/issues"
   },
   "homepage": "https://github.com/damunos/Ink-N-Thread#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.7"
+  }
 }
