--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "ink-n-thread",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.4.7",
+    "pg": "^8.11.0",
+    "cors": "^2.8.5"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/damunos/Ink-N-Thread.git"
+    "url": "https://github.com/damunos/Ink-N-Thread.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/damunos/Ink-N-Thread/issues"
   },
-  "homepage": "https://github.com/damunos/Ink-N-Thread#readme",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^16.4.7"
-  }
+  "homepage": "https://github.com/damunos/Ink-N-Thread#readme"
 }
+
