--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
+DB_HOST=ink-n-thread-db.railway.internal
+DB_NAME=railway
 DB_PASS=Detroit2!
-DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=OrderManagementDCS
