--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_HOST=ink-n-thread-db.railway.internal
 DB_NAME=railway
 DB_PASS=Detroit2!
 DB_PORT=5432
+DATABASE_URL=postgres://postgres:Detroit2!@ink-n-thread-db.railway.app:5432/railway
+
