--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
@@ -30,5 +31,3 @@
     ]
   }
 }
-
-
