--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "gh-pages": "^5.0.0",
+    "konva": "^9.3.18",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-konva": "^19.0.3",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1"
   },
