--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://damunos.github.io/Ink-N-Thread",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build -l 8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "serve": "^14.2.0"
   },
   "browserslist": {
     "production": [
