--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-konva": "^18.2.10",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "use-image": "^1.1.1"
   },
   "browserslist": {
     "production": [
