--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "ink-n-thread",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://damunos.github.io/Ink-N-Thread",
   "scripts": {
-    "start": "serve -s build -l 8080",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "framer-motion": "^12.4.10",
@@ -21,8 +18,7 @@
     "react-konva": "^18.2.10",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
-    "serve": "^14.2.4",
-    "use-image": "^1.1.1"
+    "serve": "^14.2.4"
   },
   "browserslist": {
     "production": [
