--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   }
-"homepage": "https://damunos.github.io/Ink-N-Thread"
+,"homepage": "https://damunos.github.io/Ink-N-Thread"
 }
