--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": " -d build"
   },
   "dependencies": {
     "framer-motion": "^12.4.10",
